--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "transform": {
       "^.+\\.ts$": "ts-jest",
       "^.+\\.js$": "babel-jest",
-      ".*\\.(vue)$": "vue-jest",
-      "\\.(gql|graphql)$": "jest-transform-graphql"
+      ".*\\.(vue)$": "vue-jest"
     },
     "collectCoverage": true,
     "collectCoverageFrom": [
