--- a/.github/workflows/kutipanku-web-actions.yml
+++ b/.github/workflows/kutipanku-web-actions.yml
@@ -1,4 +1,4 @@
-name: Kutipanku CI
+name: Kutipanku CI/CD
 
 on:
   push:
@@ -21,3 +21,16 @@ jobs:
           rm -rf node-modules
           yarn install
           yarn test
+
+  deploy:
+    runs-on: ubuntu-latest
+    name: Deploy - Web
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Deploy
+        uses: akhileshns/heroku-deploy@v3.8.9 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_WEB_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
