--- a/.github/workflows/kutipanku-web-actions.yml
+++ b/.github/workflows/kutipanku-web-actions.yml
@@ -25,6 +25,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     name: Deploy - Web
+    needs: [test_web]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
