--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxt/typescript-build": "^0.6.0",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@types/jest": "^26.0.20",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
@@ -37,6 +38,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "full-icu": "^1.3.1",
     "jest": "^24.1.0",
+    "jest-transform-stub": "^2.0.0",
     "prettier": "^1.19.1",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.1",
@@ -59,12 +61,16 @@
     "transform": {
       "^.+\\.ts$": "ts-jest",
       "^.+\\.js$": "babel-jest",
-      ".*\\.(vue)$": "vue-jest"
+      ".*\\.(vue)$": "vue-jest",
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub"
     },
     "collectCoverage": true,
     "collectCoverageFrom": [
       "<rootDir>/components/**/*.vue",
-      "<rootDir>/pages/**/*.vue"
+      "<rootDir>/pages/**/*.vue",
+      "<rootDir>/layouts/*.vue",
+      "<rootDir>/@utils/*.ts",
+      "<rootDir>/store/*.ts"
     ],
     "coverageReporters": [
       "html",
