--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/vuetify": "^1.11.2",
+    "cookie-universal-nuxt": "^2.1.4",
     "nuxt": "^2.0.0",
-    "nuxt-property-decorator": "^2.8.8"
+    "nuxt-property-decorator": "^2.8.8",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
