--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "cookie-universal-nuxt": "^2.1.4",
     "nuxt": "^2.0.0",
